--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: osx-64
+absl-py=1.4.0=pypi_0
 aiohttp=3.8.4=pypi_0
 aiosignal=1.3.1=pypi_0
 appdirs=1.4.4=pypi_0
@@ -16,6 +17,7 @@ bottleneck=1.3.5=py310h4e76f89_0
 brotlipy=0.7.0=py310hca72f7f_1002
 bzip2=1.0.8=h1de35cc_0
 ca-certificates=2023.01.10=hecd8cb5_0
+cachetools=5.3.1=pypi_0
 certifi=2023.5.7=py310hecd8cb5_0
 cffi=1.15.1=py310hc55c11b_0
 charset-normalizer=2.0.4=pyhd3eb1b0_0
@@ -43,6 +45,9 @@ giflib=5.2.1=h6c40b1e_3
 gmp=6.2.1=he9d5cce_3
 gmpy2=2.1.2=py310hd5de756_0
 gnutls=3.6.15=hed9c0bf_0
+google-auth=2.19.0=pypi_0
+google-auth-oauthlib=1.0.0=pypi_0
+grpcio=1.54.2=pypi_0
 holidays=0.25=pypi_0
 httpstan=4.10.0=pypi_0
 icu=58.2=h0a44026_3
@@ -82,6 +87,7 @@ lightning-utilities=0.8.0=pypi_0
 llvm-openmp=14.0.6=h0dcd299_0
 lunarcalendar=0.0.9=pypi_0
 lz4-c=1.9.4=hcec6c5f_0
+markdown=3.4.3=pypi_0
 markupsafe=2.1.1=py310hca72f7f_0
 marshmallow=3.19.0=pypi_0
 matplotlib=3.7.1=pypi_0
@@ -101,6 +107,7 @@ networkx=2.8.4=py310hecd8cb5_1
 numexpr=2.8.4=py310h9638375_0
 numpy=1.23.3=py310hc1140d4_0
 numpy-base=1.23.3=py310h2a77c02_0
+oauthlib=3.2.2=pypi_0
 opencv-python-headless=4.7.0.72=pypi_0
 openh264=2.1.1=h8346a28_0
 openssl=1.1.1t=hca72f7f_0
@@ -116,9 +123,12 @@ platformdirs=3.5.1=pyhd8ed1ab_0
 prompt-toolkit=3.0.38=pyha770c72_0
 prompt_toolkit=3.0.38=hd8ed1ab_0
 prophet=1.1.4=pypi_0
+protobuf=3.20.3=pypi_0
 psutil=5.9.5=py310h90acd4f_0
 ptyprocess=0.7.0=pyhd3deb0d_0
 pure_eval=0.2.2=pyhd8ed1ab_0
+pyasn1=0.5.0=pypi_0
+pyasn1-modules=0.3.0=pypi_0
 pycparser=2.21=pyhd3eb1b0_0
 pygments=2.15.1=pyhd8ed1ab_0
 pylev=1.4.0=pypi_0
@@ -138,6 +148,8 @@ pyyaml=6.0=pypi_0
 pyzmq=25.0.2=py310hf615a82_0
 readline=8.1.2=hca72f7f_1
 requests=2.29.0=py310hecd8cb5_0
+requests-oauthlib=1.3.1=pypi_0
+rsa=4.9=pypi_0
 scikit-learn=1.2.2=pypi_0
 scipy=1.10.1=pypi_0
 seaborn=0.12.2=pypi_0
@@ -147,6 +159,9 @@ six=1.16.0=pyhd3eb1b0_1
 sqlite=3.39.3=h707629a_0
 stack_data=0.6.2=pyhd8ed1ab_0
 sympy=1.11.1=py310hecd8cb5_0
+tensorboard=2.13.0=pypi_0
+tensorboard-data-server=0.7.0=pypi_0
+tensorboardx=2.6=pypi_0
 threadpoolctl=3.1.0=pypi_0
 tk=8.6.12=h5d9f67b_0
 torchmetrics=0.11.4=pypi_0
@@ -160,6 +175,7 @@ tzdata=2022e=h04d1e81_0
 urllib3=1.26.15=py310hecd8cb5_0
 wcwidth=0.2.6=pyhd8ed1ab_0
 webargs=8.2.0=pypi_0
+werkzeug=2.3.4=pypi_0
 wheel=0.37.1=pyhd3eb1b0_0
 xz=5.4.2=h6c40b1e_0
 yarl=1.9.2=pypi_0
